@@ -337,30 +337,6 @@ name|IllegalArgumentException
 block|{
 if|if
 condition|(
-name|operation
-operator|.
-name|isTargetNeedsArea
-argument_list|()
-operator|&&
-operator|!
-name|shape
-operator|.
-name|hasArea
-argument_list|()
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-name|operation
-operator|+
-literal|" only supports geometry with area"
-argument_list|)
-throw|;
-block|}
-if|if
-condition|(
 name|distErr
 operator|!=
 literal|null
