@@ -121,7 +121,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * A clause that compares a stored geometry to a supplied geometry. For more  * explanation of each operation, consider looking at the source implementation  * of {@link #evaluate(com.spatial4j.core.shape.Shape, com.spatial4j.core.shape.Shape)}.  *  * @see<a href="http://edndoc.esri.com/arcsde/9.1/general_topics/understand_spatial_relations.htm">  *   ESRIs docs on spatial relations</a>  *  * @lucene.experimental  */
+comment|/**  * A predicate that compares a stored geometry to a supplied geometry. It's enum-like. For more  * explanation of each predicate, consider looking at the source implementation  * of {@link #evaluate(com.spatial4j.core.shape.Shape, com.spatial4j.core.shape.Shape)}. It's important  * to be aware that Lucene-spatial makes no distinction of shape boundaries, unlike many standardized  * definitions. Nor does it make dimensional distinctions (e.g. line vs polygon).  * You can lookup a predicate by "Covers" or "Contains", for example, and you will get the  * same underlying predicate implementation.  *  * @see<a href="http://en.wikipedia.org/wiki/DE-9IM">DE-9IM at Wikipedia, based on OGC specs</a>  * @see<a href="http://edndoc.esri.com/arcsde/9.1/general_topics/understand_spatial_relations.htm">  *   ESRIs docs on spatial relations</a>  *  * @lucene.experimental  */
 end_comment
 
 begin_class
@@ -133,6 +133,7 @@ name|SpatialOperation
 implements|implements
 name|Serializable
 block|{
+comment|//TODO rename to SpatialPredicate. Use enum?  LUCENE-5771
 comment|// Private registry
 DECL|field|registry
 specifier|private
@@ -151,6 +152,7 @@ name|HashMap
 argument_list|<>
 argument_list|()
 decl_stmt|;
+comment|//has aliases
 DECL|field|list
 specifier|private
 specifier|static
@@ -167,7 +169,7 @@ argument_list|<>
 argument_list|()
 decl_stmt|;
 comment|// Geometry Operations
-comment|/** Bounding box of the *indexed* shape. */
+comment|/** Bounding box of the *indexed* shape, then {@link #Intersects}. */
 DECL|field|BBoxIntersects
 specifier|public
 specifier|static
@@ -179,12 +181,6 @@ operator|new
 name|SpatialOperation
 argument_list|(
 literal|"BBoxIntersects"
-argument_list|,
-literal|true
-argument_list|,
-literal|false
-argument_list|,
-literal|false
 argument_list|)
 block|{
 annotation|@
@@ -217,7 +213,7 @@ return|;
 block|}
 block|}
 decl_stmt|;
-comment|/** Bounding box of the *indexed* shape. */
+comment|/** Bounding box of the *indexed* shape, then {@link #IsWithin}. */
 DECL|field|BBoxWithin
 specifier|public
 specifier|static
@@ -229,14 +225,16 @@ operator|new
 name|SpatialOperation
 argument_list|(
 literal|"BBoxWithin"
-argument_list|,
-literal|true
-argument_list|,
-literal|false
-argument_list|,
-literal|false
 argument_list|)
 block|{
+block|{
+name|register
+argument_list|(
+literal|"BBoxCoveredBy"
+argument_list|)
+expr_stmt|;
+comment|//alias -- the better name
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -280,6 +278,7 @@ return|;
 block|}
 block|}
 decl_stmt|;
+comment|/** Meets the "Covers" OGC definition (boundary-neutral). */
 DECL|field|Contains
 specifier|public
 specifier|static
@@ -291,14 +290,16 @@ operator|new
 name|SpatialOperation
 argument_list|(
 literal|"Contains"
-argument_list|,
-literal|true
-argument_list|,
-literal|true
-argument_list|,
-literal|false
 argument_list|)
 block|{
+block|{
+name|register
+argument_list|(
+literal|"Covers"
+argument_list|)
+expr_stmt|;
+comment|//alias -- the better name
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -313,11 +314,6 @@ name|queryShape
 parameter_list|)
 block|{
 return|return
-name|indexedShape
-operator|.
-name|hasArea
-argument_list|()
-operator|&&
 name|indexedShape
 operator|.
 name|relate
@@ -339,6 +335,7 @@ return|;
 block|}
 block|}
 decl_stmt|;
+comment|/** Meets the "Intersects" OGC definition. */
 DECL|field|Intersects
 specifier|public
 specifier|static
@@ -350,12 +347,6 @@ operator|new
 name|SpatialOperation
 argument_list|(
 literal|"Intersects"
-argument_list|,
-literal|true
-argument_list|,
-literal|false
-argument_list|,
-literal|false
 argument_list|)
 block|{
 annotation|@
@@ -385,6 +376,7 @@ return|;
 block|}
 block|}
 decl_stmt|;
+comment|/** Meets the "Equals" OGC definition. */
 DECL|field|IsEqualTo
 specifier|public
 specifier|static
@@ -395,15 +387,17 @@ init|=
 operator|new
 name|SpatialOperation
 argument_list|(
-literal|"IsEqualTo"
-argument_list|,
-literal|false
-argument_list|,
-literal|false
-argument_list|,
-literal|false
+literal|"Equals"
 argument_list|)
 block|{
+block|{
+name|register
+argument_list|(
+literal|"IsEqualTo"
+argument_list|)
+expr_stmt|;
+comment|//alias (deprecated)
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -428,6 +422,7 @@ return|;
 block|}
 block|}
 decl_stmt|;
+comment|/** Meets the "Disjoint" OGC definition. */
 DECL|field|IsDisjointTo
 specifier|public
 specifier|static
@@ -438,15 +433,17 @@ init|=
 operator|new
 name|SpatialOperation
 argument_list|(
-literal|"IsDisjointTo"
-argument_list|,
-literal|false
-argument_list|,
-literal|false
-argument_list|,
-literal|false
+literal|"Disjoint"
 argument_list|)
 block|{
+block|{
+name|register
+argument_list|(
+literal|"IsDisjointTo"
+argument_list|)
+expr_stmt|;
+comment|//alias (deprecated)
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -475,6 +472,7 @@ return|;
 block|}
 block|}
 decl_stmt|;
+comment|/** Meets the "CoveredBy" OGC definition (boundary-neutral). */
 DECL|field|IsWithin
 specifier|public
 specifier|static
@@ -485,15 +483,23 @@ init|=
 operator|new
 name|SpatialOperation
 argument_list|(
-literal|"IsWithin"
-argument_list|,
-literal|true
-argument_list|,
-literal|false
-argument_list|,
-literal|true
+literal|"Within"
 argument_list|)
 block|{
+block|{
+name|register
+argument_list|(
+literal|"IsWithin"
+argument_list|)
+expr_stmt|;
+comment|//alias (deprecated)
+name|register
+argument_list|(
+literal|"CoveredBy"
+argument_list|)
+expr_stmt|;
+comment|//alias -- the more appropriate name.
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -508,12 +514,6 @@ name|queryShape
 parameter_list|)
 block|{
 return|return
-name|queryShape
-operator|.
-name|hasArea
-argument_list|()
-operator|&&
-operator|(
 name|indexedShape
 operator|.
 name|relate
@@ -531,11 +531,11 @@ name|equals
 argument_list|(
 name|queryShape
 argument_list|)
-operator|)
 return|;
 block|}
 block|}
 decl_stmt|;
+comment|/** Almost meets the "Overlaps" OGC definition, but boundary-neutral (boundary==interior). */
 DECL|field|Overlaps
 specifier|public
 specifier|static
@@ -547,12 +547,6 @@ operator|new
 name|SpatialOperation
 argument_list|(
 literal|"Overlaps"
-argument_list|,
-literal|true
-argument_list|,
-literal|false
-argument_list|,
-literal|true
 argument_list|)
 block|{
 annotation|@
@@ -569,42 +563,20 @@ name|queryShape
 parameter_list|)
 block|{
 return|return
-name|queryShape
-operator|.
-name|hasArea
-argument_list|()
-operator|&&
 name|indexedShape
 operator|.
 name|relate
 argument_list|(
 name|queryShape
 argument_list|)
+operator|==
+name|SpatialRelation
 operator|.
-name|intersects
-argument_list|()
+name|INTERSECTS
 return|;
+comment|//not Contains or Within or Disjoint
 block|}
 block|}
-decl_stmt|;
-comment|// Member variables
-DECL|field|scoreIsMeaningful
-specifier|private
-specifier|final
-name|boolean
-name|scoreIsMeaningful
-decl_stmt|;
-DECL|field|sourceNeedsArea
-specifier|private
-specifier|final
-name|boolean
-name|sourceNeedsArea
-decl_stmt|;
-DECL|field|targetNeedsArea
-specifier|private
-specifier|final
-name|boolean
-name|targetNeedsArea
 decl_stmt|;
 DECL|field|name
 specifier|private
@@ -618,15 +590,6 @@ name|SpatialOperation
 parameter_list|(
 name|String
 name|name
-parameter_list|,
-name|boolean
-name|scoreIsMeaningful
-parameter_list|,
-name|boolean
-name|sourceNeedsArea
-parameter_list|,
-name|boolean
-name|targetNeedsArea
 parameter_list|)
 block|{
 name|this
@@ -635,24 +598,28 @@ name|name
 operator|=
 name|name
 expr_stmt|;
-name|this
-operator|.
-name|scoreIsMeaningful
-operator|=
-name|scoreIsMeaningful
+name|register
+argument_list|(
+name|name
+argument_list|)
 expr_stmt|;
-name|this
+name|list
 operator|.
-name|sourceNeedsArea
-operator|=
-name|sourceNeedsArea
-expr_stmt|;
+name|add
+argument_list|(
 name|this
-operator|.
-name|targetNeedsArea
-operator|=
-name|targetNeedsArea
+argument_list|)
 expr_stmt|;
+block|}
+DECL|method|register
+specifier|protected
+name|void
+name|register
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
 name|registry
 operator|.
 name|put
@@ -675,13 +642,6 @@ operator|.
 name|ROOT
 argument_list|)
 argument_list|,
-name|this
-argument_list|)
-expr_stmt|;
-name|list
-operator|.
-name|add
-argument_list|(
 name|this
 argument_list|)
 expr_stmt|;
@@ -817,37 +777,6 @@ name|Shape
 name|queryShape
 parameter_list|)
 function_decl|;
-comment|// ================================================= Getters / Setters =============================================
-DECL|method|isScoreIsMeaningful
-specifier|public
-name|boolean
-name|isScoreIsMeaningful
-parameter_list|()
-block|{
-return|return
-name|scoreIsMeaningful
-return|;
-block|}
-DECL|method|isSourceNeedsArea
-specifier|public
-name|boolean
-name|isSourceNeedsArea
-parameter_list|()
-block|{
-return|return
-name|sourceNeedsArea
-return|;
-block|}
-DECL|method|isTargetNeedsArea
-specifier|public
-name|boolean
-name|isTargetNeedsArea
-parameter_list|()
-block|{
-return|return
-name|targetNeedsArea
-return|;
-block|}
 DECL|method|getName
 specifier|public
 name|String
