@@ -70,6 +70,20 @@ name|Test
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|text
+operator|.
+name|ParseException
+import|;
+end_import
+
+begin_comment
+comment|//Tests SpatialOperation somewhat too
+end_comment
+
 begin_class
 DECL|class|SpatialArgsParserTest
 specifier|public
@@ -261,6 +275,120 @@ parameter_list|)
 block|{
 comment|//expected
 block|}
+name|assertAlias
+argument_list|(
+name|SpatialOperation
+operator|.
+name|IsWithin
+argument_list|,
+literal|"CoveredBy"
+argument_list|)
+expr_stmt|;
+name|assertAlias
+argument_list|(
+name|SpatialOperation
+operator|.
+name|IsWithin
+argument_list|,
+literal|"COVEREDBY"
+argument_list|)
+expr_stmt|;
+name|assertAlias
+argument_list|(
+name|SpatialOperation
+operator|.
+name|IsWithin
+argument_list|,
+literal|"coveredBy"
+argument_list|)
+expr_stmt|;
+name|assertAlias
+argument_list|(
+name|SpatialOperation
+operator|.
+name|IsWithin
+argument_list|,
+literal|"Within"
+argument_list|)
+expr_stmt|;
+name|assertAlias
+argument_list|(
+name|SpatialOperation
+operator|.
+name|IsEqualTo
+argument_list|,
+literal|"Equals"
+argument_list|)
+expr_stmt|;
+name|assertAlias
+argument_list|(
+name|SpatialOperation
+operator|.
+name|IsDisjointTo
+argument_list|,
+literal|"disjoint"
+argument_list|)
+expr_stmt|;
+name|assertAlias
+argument_list|(
+name|SpatialOperation
+operator|.
+name|Contains
+argument_list|,
+literal|"Covers"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|assertAlias
+specifier|private
+name|void
+name|assertAlias
+parameter_list|(
+name|SpatialOperation
+name|op
+parameter_list|,
+specifier|final
+name|String
+name|name
+parameter_list|)
+throws|throws
+name|ParseException
+block|{
+name|String
+name|arg
+decl_stmt|;
+name|SpatialArgs
+name|out
+decl_stmt|;
+name|arg
+operator|=
+name|name
+operator|+
+literal|"(Point(0 0))"
+expr_stmt|;
+name|out
+operator|=
+operator|new
+name|SpatialArgsParser
+argument_list|()
+operator|.
+name|parse
+argument_list|(
+name|arg
+argument_list|,
+name|ctx
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|op
+argument_list|,
+name|out
+operator|.
+name|getOperation
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
